<resources>
    <string name="app_name">TravelJournalAndroid</string>
    <string name="travel_journal">Travel Journal</string>
    <string name="poweredBy">Powered By Geanta Anamaria and Voican Vlad</string>
    <string name="new_account">Not registered yet? Create new account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="favorites">Favorites</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="tripname">TripName</string>
    <string name="favorites_added">Added to favorites!</string>
    <string name="favorites_removed">Removed from favorites!</string>
    <string name="backpacker">Backpacker</string>
</resources>